--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "style": "dist/css/simplebar.min.css",
   "scripts": {
     "start": "rollup -c -w",
-    "start:dev": "npx webpack serve",
-    "build": "rollup -c && webpack"
+    "start:dev": "webpack serve --mode=development",
+    "build": "rollup -c && webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -28,23 +28,34 @@
   },
   "homepage": "https://nishantk02.github.io/SimpleDropit",
   "devDependencies": {
+    "@babel/core": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "extract-loader": "^5.1.0",
     "handlebars-loader": "^1.7.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
     "rollup-plugin-license": "^2.3.0",
     "rollup-plugin-terser": "^7.0.2",
-    "webpack": "^5.37.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/core": "^7.14.2"
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
+    "highlight.js": "^11.0.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
